--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,7 @@
   <mat-tab label="Thermodynamics">
     <app-thermo></app-thermo>
   </mat-tab>
+  <mat-tab label="AI">
+    <app-ai></app-ai>
+  </mat-tab>
 </mat-tab-group>
