--- a/src/app/ai/magic15/magic15.component.html
+++ b/src/app/ai/magic15/magic15.component.html
@@ -9,4 +9,5 @@
 </table>
 <div>
   <button mat-button color="primary" (click)="refresh()">Refresh</button>
+  <button mat-button color="primary" (click)="play()">Play</button>
 </div>
