--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,7 @@
   <mat-tab label="AI">
     <app-ai></app-ai>
   </mat-tab>
+  <mat-tab label="Assembly">
+    <app-assembly></app-assembly>
+  </mat-tab>
 </mat-tab-group>
